Tilføj nyt projekt med billede og PDF-linkUpdate index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
                     </figcaption>
                 </figure>
 
+                <!-- NYTILFØJET PROJEKT -->
+                <figure class="project-item" data-category="alle">
+                    <a href="projektdocs/projekt-eksempel.pdf" target="_blank">
+                        <img src="images/projekt-eksempel.jpg" alt="Projekt Eksempel" loading="lazy">
+                    </a>
+                    <figcaption>
+                        <h3>Projekt Eksempel</h3>
+                        <p>Projekt eksempel beskrivelse</p>
+                        <span class="project-year">2024</span>
+                        <a href="projektdocs/projekt-eksempel.pdf" class="pdf-link" target="_blank">Se PDF</a>
+                    </figcaption>
+                </figure>
+
                 <!-- TILFØJ FLERE PROJEKTER HER - Kopier en 'figure' blok og ændr indholdet -->
             </div>
         </section>
