--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Mit Byggefirma</h1>
+                <h1>Cagri Ceylan - Bygningskonstruktør & Teknisk designer </h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#hjem">Hjem</a></li>
