--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <title>Min Byggeprojekt Portefølje</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,7 +21,6 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <section id="hjem" class="hero">
             <div class="hero-content">
@@ -29,7 +29,6 @@
                 <a href="#projekter" class="cta-button">Se mine projekter</a>
             </div>
         </section>
-
         <section id="projekter" class="projects">
             <h2>Mine Byggeprojekter</h2>
             
@@ -39,7 +38,6 @@
                 <button class="filter-btn" data-filter="renovering">Renovering</button>
                 <button class="filter-btn" data-filter="erhverv">Erhverv</button>
             </div>
-
             <div class="gallery">
                 <!-- EKSEMPEL PROJEKT 1 - Kopier denne blok for nye projekter -->
                 <figure class="project-item" data-category="nybyg">
@@ -50,7 +48,6 @@
                         <span class="project-year">2024</span>
                     </figcaption>
                 </figure>
-
                 <!-- EKSEMPEL PROJEKT 2 -->
                 <figure class="project-item" data-category="renovering">
                     <img src="images/projekt2.jpg" alt="Køkkenrenovering" loading="lazy">
@@ -60,7 +57,6 @@
                         <span class="project-year">2024</span>
                     </figcaption>
                 </figure>
-
                 <!-- EKSEMPEL PROJEKT 3 -->
                 <figure class="project-item" data-category="erhverv">
                     <img src="images/projekt3.jpg" alt="Kontorbyggeri" loading="lazy">
@@ -70,7 +66,6 @@
                         <span class="project-year">2023</span>
                     </figcaption>
                 </figure>
-
                 <!-- NYTILFØJET PROJEKT -->
                 <figure class="project-item" data-category="alle">
                     <a href="projektdocs/projekt-eksempel.pdf" target="_blank">
@@ -80,14 +75,12 @@
                         <h3>Projekt Eksempel</h3>
                         <p>Projekt eksempel beskrivelse</p>
                         <span class="project-year">2024</span>
-                        <a href="projektdocs/projekt-eksempel.pdf" class="pdf-link" target="_blank">Se PDF</a>
+                        <a href="projektdocs/projekt-eksempel.pdf" target="_blank" class="pdf-link">Se PDF</a>
                     </figcaption>
                 </figure>
-
                 <!-- TILFØJ FLERE PROJEKTER HER - Kopier en 'figure' blok og ændr indholdet -->
             </div>
         </section>
-
         <section id="om" class="about">
             <div class="about-content">
                 <h2>Om Mig</h2>
@@ -103,7 +96,6 @@
                 </div>
             </div>
         </section>
-
         <section id="kontakt" class="contact">
             <h2>Kontakt Mig</h2>
             <div class="contact-content">
@@ -126,24 +118,21 @@
                     <input type="text" name="navn" placeholder="Dit navn" required>
                     <input type="email" name="email" placeholder="Din email" required>
                     <input type="tel" name="telefon" placeholder="Dit telefonnummer">
-                    <textarea name="besked" placeholder="Beskriv dit projekt..." rows="5" required></textarea>
+                    <textarea name="besked" rows="5" placeholder="Beskriv dit projekt..." required></textarea>
                     <button type="submit">Send Besked</button>
                 </form>
             </div>
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2024 Mit Byggefirma. Alle rettigheder forbeholdes.</p>
+        <p>© 2024 Mit Byggefirma. Alle rettigheder forbeholdes.</p>
     </footer>
-
     <!-- Lightbox for billeder -->
     <div id="lightbox" class="lightbox">
-        <span class="close">&times;</span>
-        <img class="lightbox-content" id="lightbox-img">
+        <span class="close">×</span>
+        <img id="lightbox-img" class="lightbox-content">
         <div class="lightbox-caption"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
