--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Min Byggeprojekt Portefølje</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -45,7 +45,7 @@
     </form>
   </section>
   <footer>
-    <p>&copy; 2025 Cagri Ceylan | Byggeportefølje</p>
+    <p>© 2025 Cagri Ceylan | Byggeportefølje</p>
   </footer>
 </body>
 </html>
